# system-information-tool

./: Cargo.toml  README.md
src/: main.rs
