[package]
name = "system-information-tool"
version = "0.1.0"
authors = ["Antze K <antze@singu-lair.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "si"
path = "src/main.rs"

[dependencies]
byte-unit = "4"
serde = "1"
winreg = "0.8"
wmi = "0.7"
